	 input layer code.
20040311 ui/gtk/roms.c: make changing ROMs work.
20040311 machine.c: remove the segfault which would occur if one of the
	 ROMs of a multi-ROM machine didn't load.
20040312 ay.c: unused bits of AY registers are silently zeroed (basically
	 equivalent to patch #911206 by Stuart Brady).
20040317 sound/Makefile.am: Add libspectrum path to includes.
20040319 Makefile.am,fuse.c,machine.c,periph.c,settings.dat,ui/options.dat,
	 ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,widget_internals.h}:
	 add support for the "simple 8-bit" IDE interface (part of patch
	 #916816) (Garry Lancaster).
20040319 simpleide.[ch],ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,
	 widget_internals.h}: add a 'commit' menu option for the IDE
	 disks.
20040320 snapshot.c: copy RAM page 8-15 into the libspectrum_snap structure.
20040320 snapshot.c,tape.c: select output format based on filename.
20040320 snapshot.c,trdos.[ch]: support the Beta 128 block of the SZX format.
20040320 machine.[ch],z80/{coretest.c,z80_ops.c}: use libspectrum's new
	 'Even M1' capability.
20040322 input.c,joystick.[ch]: convert the QAOP<space> joystick emulation
	 over to using the new input layer.
20040323 input.c,joystick.[ch],settings.dat,ui/gtk/{gtkinternal.h,
	 gtkjoystick.c,gtkui.c}: first bits of code allowing emulation of
	 multiple joystick types.
20040324 joystick.[ch],ui/gtk/gtkjoystick.c: generalise the joystick
	 selection code.
20040324 joystick.[ch]: start merging the Timex joystick emulation into
	 the new scheme of things.
20040325 input.c,joystick.[ch],ui/sdl/{sdljoystick.c,sdlkeyboard.c},
	 widget/menu_data.c: make the SDL joystick code use the new input
	 layer; also a couple of SDL compilation fixes.
20040325 sound.c: use 16 bits when mixing sound samples (patch #911525)
	 (Stuart Brady).
20040325 event.c,ui/uijoystick.[ch]: make the libjsw code use the new
	 input layer.
20040325 ui/uijoystick.c: fix up the 'no joystick' code for the new input
	 layer.